# PriceHunter-UZ

./: .env  .env.example  Dockerfile  PROJECT_FULL.txt  README.md  pyproject.toml  render.yaml  requirements.txt  run.py  test_db.py  test_manager.py  toolkit_tree.txt
alembic/: env.py
alembic/versions/: 246c1ec2f83d_create_subscriptions.py  86e54f289b8d_init_database.py
app/: main.py  test_uzum.py
app/bot/: bot.py  dispatcher.py
app/core/: http.py  logger.py  settings.py
app/database/: base.py  init_db.py  session.py
app/domain/: product_dto.py
app/extractors/: base.py  olcha.py
app/models/: price.py  product.py  store.py  subscription.py
app/parsers/: base.py  base_browser.py  base_http.py  manager.py
app/providers/: __init__.py  base.py  graphql_client.py  olcha.py  uzum.py
app/repositories/: __init__.py  base.py  price_repository.py  product_repository.py  store_repository.py  subscription_repository.py
app/services/: history_service.py  marketplace_manager.py  parser_service.py  search_service.py  subscription_service.py  sync_service.py
app/web/: server.py  (+2 more)
project_snapshot/: architecture.json  components.json  dependencies.json  imports_graph.json  project_graph.json  project_tree.txt  statistics.json
research/: README.md  analyze_auth.py  api_explorer.py  api_probe.py  api_responses.json  capture_suggestion.py  debug_search.py  html_inspector.py  network_probe.py  olcha_browser_probe.py  olcha_probe.py  test_api.py  test_provider.py  test_uzum.py  uzum_browser_probe.py  uzum_probe.py
tools/: inspect_project.py  remove_bom.py
(+1047 files in other folders)
