[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pricehunter-uz"
version = "0.1.0"
description = "AI Price Tracker for Uzbekistan"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
    { name = "PriceHunter UZ Team" }
]

dependencies = [
    "aiogram>=3.22.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",

    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "alembic>=1.16.5",

    "redis>=6.4.0",

    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "playwright>=1.55.0",

    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",

    "python-dotenv>=1.1.1",

    "apscheduler>=3.11.0",

    "loguru>=0.7.3",

    "orjson>=3.11.3",

    "tenacity>=9.1.2",

    "aiofiles>=24.1.0",

    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",

    "ruff>=0.13.2",
    "black>=25.9.0",
    "mypy>=1.18.2",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
